scrollbar fix

--- a/frontend/www/public/style.css
+++ b/frontend/www/public/style.css
@@ -51,10 +51,6 @@ body {
     color: black;
 }
 
-#real-time-transcript-box::-webkit-scrollbar {
-    display: none;
-}
-
 #real-time-transcript-box {
     font-size: medium;
     color: #fff;
@@ -67,7 +63,6 @@ body {
     border-color: #4c3c3c;
     filter: drop-shadow(2px 2px 5px black);
     -ms-overflow-style: none;
-    scrollbar-width: none;
     overflow: auto;
 }
 
